# IndieStudio

./: .gdb_history  .gitignore  CMakeLists.txt  README.txt  Screen.cpp  Screen.hpp  init_system.sh  peda-session-bomberman.txt  save.txt
bonus/mingw32-exe/: Makefile
media/models/: Skull.dae  gunguy.md2  sphere.dae
src/: config.hpp
src/Input/: Controller.cpp  Controller.hpp  Input.hpp
src/core/: main.cpp
src/ecs/: Component.cpp  Component.hpp  Directions.hpp  ECSCore.cpp  ECSCore.hpp  EcsCore.cpp  EcsCore.hpp  Entity.cpp  Entity.hpp  Exceptions.hpp  Ressources.hpp  System.cpp  System.hpp  Vector2.hpp
src/ecs/Components/: BlockComponent.cpp  BlockComponent.hpp  BlockedComponent.cpp  BlockedComponent.hpp  BombDropperComponent.cpp  BombDropperComponent.hpp  BreakableComponent.cpp  BreakableComponent.hpp  BuffedComponent.cpp  BuffedComponent.hpp  ColisionComponent.cpp  ColisionComponent.hpp  ColliderComponent.cpp  ColliderComponent.hpp  CollisionComponent.cpp  CollisionComponent.hpp  ControllableComponent.cpp  ControllableComponent.hpp  ControlledByAIComponent.cpp  ControlledByAIComponent.hpp  ControllerComponent.cpp  ControllerComponent.hpp  CurseComponent.cpp  CurseComponent.hpp  DirectionComponent.cpp  DirectionComponent.hpp  DisplayableComponent.cpp  DisplayableComponent.hpp  EntityDropperComponent.cpp  EntityDropperComponent.hpp  EphemeralComponent.cpp  EphemeralComponent.hpp  ExplodeComponent.cpp  ExplodeComponent.hpp  HealthComponent.cpp  HealthComponent.hpp  ItemContainerComponent.cpp  ItemContainerComponent.hpp  KickableComponent.cpp  KickableComponent.hpp  (+23 more)
src/ecs/Entities/: Bomb.cpp  Bomb.hpp  Brick.cpp  Brick.hpp  DroppedBonusBomb.cpp  DroppedBonusBomb.hpp  DroppedBonusHardness.cpp  DroppedBonusHardness.hpp  DroppedBonusHealth.cpp  DroppedBonusHealth.hpp  DroppedBonusKick.cpp  DroppedBonusKick.hpp  DroppedBonusRange.cpp  DroppedBonusRange.hpp  DroppedBonusSpeed.cpp  DroppedBonusSpeed.hpp  DroppedItem.cpp  DroppedItem.hpp  ExplosionFrame.cpp  ExplosionFrame.hpp  Player.cpp  Player.hpp  Wall.cpp  Wall.hpp
src/ecs/Factories/: ComponentFactory.cpp  ComponentFactory.hpp  EntityFactory.cpp  EntityFactory.hpp  SystemFactory.cpp  SystemFactory.hpp
src/ecs/Systems/: BlockSystem.cpp  BlockSystem.hpp  BlockedSystem.cpp  BlockedSystem.hpp  BombDropperSystem.cpp  BombDropperSystem.hpp  BuffedSystem.cpp  CollisionSystem.cpp  CollisionSystem.hpp  ControllableSystem.cpp  ControlledByAISystem.cpp  CurseSystem.cpp  DisplayableSystem.cpp  DisplayableSystem.hpp  EntityDropperSystem.cpp  EntityDropperSystem.hpp  EphemeralSystem.cpp  EphemeralSystem.hpp  ExplodeSystem.cpp  ExplodeSystem.hpp  HealthSystem.cpp  HealthSystem.hpp  KickableSystem.cpp  KickableSystem.hpp  MortalSystem.cpp  MovableSystem.cpp  OnCollisionDamageDealerSystem.cpp  PickerSystem.cpp  PowerUpPickedSystem.cpp  PowerUpSystem.cpp  UltInvincibilitySystem.cpp  UltimeSystem.cpp  UltimeSystem.hpp
src/ecs/components/: BlockedComponent.cpp  BlockedComponent.hpp  BombDropperComponent.cpp  BombDropperComponent.hpp  BuffedComponent.hpp  ColliderComponent.cpp  CollisionComponent.cpp  ControllableComponent.cpp  ControllableComponent.hpp  CurseComponent.cpp  CurseComponent.hpp  CurseOnPickComponent.cpp  CurseOnPickComponent.hpp  DisplayableComponent.cpp  DisplayableComponent.hpp  EntityDropperComponent.cpp  EntityDropperComponent.hpp  EphemeralComponent.cpp  EphemeralComponent.hpp  ExplodeComponent.hpp  KickableComponent.cpp  KickableComponent.hpp  KickerComponent.cpp  KickerComponent.hpp  MortalComponent.cpp  MovableComponent.cpp  MovableComponent.hpp  OOBKillComponent.cpp  OOBKillComponent.hpp  OnCollisionDamageDealerComponent.cpp  OnCollisionDamageDealerComponent.hpp  PickableComponent.cpp  PickableComponent.hpp  PickerComponent.cpp  PickerComponent.hpp  PositionComponent.cpp  PositionComponent.hpp  PowerUpComponent.cpp  PowerUpComponent.hpp  PowerUpPickedComponent.cpp  (+6 more)
src/ecs/data/: Directions.hpp  Vector2.hpp
src/ecs/entities/: AIPlayer.cpp  AIPlayer.hpp  Alphaone.cpp  Bedrock.cpp  Bomb.cpp  Brick.cpp  DroppedBonusBomb.cpp  DroppedBonusHardness.cpp  DroppedBonusHealth.cpp  DroppedBonusHealth.hpp  DroppedBonusKick.cpp  DroppedBonusKick.hpp  DroppedBonusRange.cpp  DroppedBonusSpeed.cpp  DroppedItem.cpp  ExplosionFrame.cpp  Faerie.cpp  Gunguy.cpp  Gunguy.hpp  Player.cpp  Player.hpp  Skull.cpp  Sydney.cpp  Wall.cpp  Warrior.cpp  Warrior.hpp  Xenotype.cpp
src/ecs/factories/: ComponentFactory.cpp  ComponentFactory.hpp  EntityFactory.cpp  SystemFactory.cpp
src/ecs/systems/: BlockedSystem.cpp  BombDropperSystem.cpp  CollisionSystem.cpp  ControllableSystem.cpp  ControlledByAISystem.cpp  ControlledByAISystem.hpp  CurseOnPickSystem.cpp  CurseSystem.cpp  DisplayableSystem.cpp  EntityDropperSystem.cpp  ExplodeSystem.cpp  ExplodeSystem.hpp  HealthSystem.cpp  KickableSystem.cpp  KickerSystem.cpp  KillCounterSystem.cpp  MovableSystem.cpp  OnCollisionDamageDealerSystem.cpp  PickerSystem.cpp  PowerUpPickedSystem.cpp  UltBombRainSystem.cpp  UltInvincibilitySystem.cpp  UltShockWaveSystem.cpp  UltStrikeSystem.cpp  UltimeSystem.cpp
src/input/: AIBrain.cpp  AIBrain.hpp  Controller.cpp  Controller.hpp  Input.hpp  Keyboard.cpp  Keyboard.hpp  Keybord.hpp
src/input/error/: Errors.cpp  Errors.hpp
src/irrlicht/: Animations.hpp  Exceptions.cpp  Exceptions.hpp  Irrlicht.cpp  Irrlicht.hpp  screen.cpp  screen.hpp
src/irrlicht/EventReceiver/: EventReceiver.cpp  EventReceiver.hpp
src/irrlicht/GameEngine/: GameEngine.cpp  GameEngine.hpp
src/irrlicht/GameScene/: GameScene.cpp  GameScene.hpp
src/irrlicht/Screen/: Screen.cpp  Screen.hpp
src/irrlicht/TextBox/: TextBox.cpp  TextBox.hpp
src/irrlicht/game-scene/: GameScene.cpp  GameScene.hpp
src/irrlicht/gameEngine/: gameEngine.cpp  gameEngine.hpp
src/irrlicht/screen/: Screen.cpp  Screen.hpp  screen.cpp  screen.hpp
src/irrlicht/textbox/: TextBox.cpp  TextBox.hpp  keys_to_str.hpp
src/map/: Map.cpp  Map.hpp
src/sound/: Exception.hpp  SoundSystem.cpp  SoundSystem.hpp
tmpAnimations/: Makefile  main.cpp
tmpSrc/: main.cpp
tmpSrc/media/: Bomb.dae
(+65 files in other folders)
