cmake_minimum_required(VERSION 3.11)

project(bomberman)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/packages)

add_executable(
	bomberman
	src/config.hpp
	src/core/main.cpp
	src/ecs/ECSCore.cpp
	src/ecs/ECSCore.hpp
	src/ecs/System.cpp
	src/ecs/System.hpp
	src/ecs/Component.cpp
	src/ecs/Component.hpp
	src/ecs/Entity.cpp
	src/ecs/Entity.hpp
	src/ecs/Exceptions.hpp
	src/ecs/Ressources.hpp
	src/ecs/data/Directions.hpp
	src/ecs/data/Vector2.hpp
	src/ecs/Components/BombDropperComponent.cpp
	src/ecs/Components/BombDropperComponent.hpp
	src/ecs/Components/DisplayableComponent.cpp
	src/ecs/Components/DisplayableComponent.hpp
	src/ecs/Components/HealthComponent.cpp
	src/ecs/Components/HealthComponent.hpp
	src/ecs/Components/EntityDropperComponent.cpp
	src/ecs/Components/EntityDropperComponent.hpp
	src/ecs/Components/KickableComponent.cpp
	src/ecs/Components/KickableComponent.hpp
	src/ecs/Components/KickerComponent.cpp
	src/ecs/Components/KickerComponent.hpp
	src/ecs/Components/MovableComponent.cpp
	src/ecs/Components/MovableComponent.hpp
	src/ecs/Components/PositionComponent.cpp
	src/ecs/Components/PositionComponent.hpp
	src/ecs/Components/PowerUpComponent.cpp
	src/ecs/Components/PowerUpComponent.hpp
	src/ecs/Components/CollisionComponent.cpp
	src/ecs/Components/CollisionComponent.hpp
	src/ecs/Components/BuffedComponent.cpp
	src/ecs/Components/BuffedComponent.hpp
	src/ecs/Components/PickableComponent.cpp
	src/ecs/Components/PickableComponent.hpp
	src/ecs/Components/PickerComponent.cpp
	src/ecs/Components/PickerComponent.hpp
	src/ecs/Components/ExplodeComponent.cpp
	src/ecs/Components/ExplodeComponent.hpp
	src/ecs/Components/ControllableComponent.cpp
	src/ecs/Components/ControllableComponent.hpp
	src/ecs/Components/EphemeralComponent.cpp
	src/ecs/Components/EphemeralComponent.hpp
	src/ecs/Components/ColliderComponent.cpp
	src/ecs/Components/ColliderComponent.hpp
	src/ecs/Components/BlockedComponent.cpp
	src/ecs/Components/BlockedComponent.hpp
	src/ecs/Components/OnCollisionDamageDealerComponent.cpp
	src/ecs/Components/OnCollisionDamageDealerComponent.hpp
	src/ecs/Systems/OnCollisionDamageDealerSystem.cpp
	src/ecs/Systems/OnCollisionDamageDealerSystem.hpp
	src/ecs/Components/PowerUpPickedComponent.cpp
	src/ecs/Components/PowerUpPickedComponent.hpp
	src/ecs/Factories/ComponentFactory.cpp
	src/ecs/Factories/ComponentFactory.hpp
	src/ecs/Factories/EntityFactory.cpp
	src/ecs/Factories/EntityFactory.hpp
	src/ecs/Factories/SystemFactory.cpp
	src/ecs/Factories/SystemFactory.hpp
	src/ecs/Entities/Brick.cpp
	src/ecs/Entities/Brick.hpp
	src/ecs/Entities/Wall.cpp
	src/ecs/Entities/Wall.hpp
	src/ecs/Entities/Player.cpp
	src/ecs/Entities/Player.hpp
	src/ecs/Entities/ExplosionFrame.cpp
	src/ecs/Entities/ExplosionFrame.hpp
	src/ecs/Entities/Bomb.cpp
	src/ecs/Entities/Bomb.hpp
	src/ecs/Entities/DroppedItem.cpp
	src/ecs/Entities/DroppedItem.hpp
	src/ecs/Entities/DroppedBonusHealth.cpp
	src/ecs/Entities/DroppedBonusHealth.hpp
	src/ecs/Entities/DroppedBonusSpeed.cpp
	src/ecs/Entities/DroppedBonusSpeed.hpp
	src/ecs/Entities/DroppedBonusBomb.cpp
	src/ecs/Entities/DroppedBonusBomb.hpp
	src/ecs/Entities/DroppedBonusKick.cpp
	src/ecs/Entities/DroppedBonusKick.hpp
	src/ecs/Entities/DroppedBonusHardness.cpp
	src/ecs/Entities/DroppedBonusHardness.hpp
	src/ecs/Entities/DroppedBonusRange.cpp
	src/ecs/Entities/DroppedBonusRange.hpp
	src/ecs/Systems/KickableSystem.cpp
	src/ecs/Systems/KickableSystem.hpp
	src/ecs/Systems/EphemeralSystem.cpp
	src/ecs/Systems/EphemeralSystem.hpp
	src/ecs/Systems/BombDropperSystem.cpp
	src/ecs/Systems/BombDropperSystem.hpp
	src/ecs/Systems/HealthSystem.cpp
	src/ecs/Systems/HealthSystem.hpp
	src/ecs/Systems/CollisionSystem.cpp
	src/ecs/Systems/CollisionSystem.hpp
	src/ecs/Systems/DisplayableSystem.cpp
	src/ecs/Systems/DisplayableSystem.hpp
	src/ecs/Systems/BuffedSystem.cpp
	src/ecs/Systems/BuffedSystem.hpp
	src/ecs/Systems/PositionSystem.cpp
	src/ecs/Systems/PositionSystem.hpp
	src/ecs/Systems/MovableSystem.cpp
	src/ecs/Systems/MovableSystem.hpp
	src/ecs/Systems/ControllableSystem.cpp
	src/ecs/Systems/ControllableSystem.hpp
	src/ecs/Systems/PowerUpPickedSystem.cpp
	src/ecs/Systems/PowerUpPickedSystem.hpp
	src/ecs/Systems/EntityDropperSystem.cpp
	src/ecs/Systems/EntityDropperSystem.hpp
	src/ecs/Systems/ColliderSystem.cpp
	src/ecs/Systems/ColliderSystem.hpp
	src/ecs/Systems/BlockedSystem.cpp
	src/ecs/Systems/BlockedSystem.hpp
	src/ecs/Systems/ExplodeSystem.cpp
	src/ecs/Systems/ExplodeSystem.hpp
	src/ecs/Systems/PickerSystem.cpp
	src/ecs/Systems/PickerSystem.hpp
	src/ecs/Systems/PowerUpSystem.cpp
	src/ecs/Systems/PowerUpSystem.hpp
	src/ecs/Systems/PickableSystem.cpp
	src/ecs/Systems/PickableSystem.hpp
	src/ecs/Components/CurseComponent.cpp
	src/ecs/Components/CurseComponent.hpp
	src/ecs/Systems/CurseSystem.cpp
	src/ecs/Systems/CurseSystem.hpp
	src/irrlicht/Irrlicht.cpp
	src/irrlicht/Irrlicht.hpp
	src/irrlicht/Animations.hpp
	src/map/Map.hpp
	src/map/Map.cpp
	src/input/Controller.cpp
	src/input/Controller.hpp
	src/input/Input.hpp
	src/input/Keyboard.cpp
	src/input/Keyboard.hpp
	src/ecs/Systems/KickerSystem.cpp
	src/ecs/Systems/KickerSystem.hpp
	src/ecs/data/NumericValue.hpp
	src/input/error/Errors.cpp
	src/input/error/Errors.hpp
	src/ecs/Systems/OnCollisionDamageDealerSystem.cpp
	src/ecs/Systems/OnCollisionDamageDealerSystem.hpp
		src/ecs/Components/UltimeComponent.cpp src/ecs/Components/UltimeComponent.hpp src/ecs/Systems/UltimeSystem.cpp src/ecs/Systems/UltimeSystem.hpp src/ecs/Components/MortalComponent.cpp src/ecs/Components/MortalComponent.hpp src/ecs/Systems/MortalSystem.cpp src/ecs/Systems/MortalSystem.hpp)

find_package(Irrlicht REQUIRED)

target_link_libraries(
	bomberman
	Irrlicht
	sfml-graphics
	sfml-window
	sfml-system
)

